--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
   "expo": {
-    "name": "React-Native-Final",
-    "description": "This project is really great.",
-    "slug": "React-Native-Final",
+    "name": "rnf",
+    "slug": "rnf",
     "privacy": "public",
-    "sdkVersion": "31.0.0",
+    "sdkVersion": "32.0.0",
     "platforms": [
       "ios",
       "android"
