--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject"
@@ -15,8 +15,6 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
-    "react-native-elements": "^1.1.0",
-    "react-native-image-zoom-viewer": "^2.2.25",
     "react-native-maps": "^0.23.0",
     "react-native-permissions": "^1.1.1",
     "react-navigation": "^3.7.1"
